data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1287.wast
;; 8. **Test Description:** Develop a WASM function with multiple `if` statements nested within a loop, using `br` to branch out from an `if` and then making a call to an exported function from another module.    **Specific Constraint:** This checks operand stack transition and nested `if` structures handling integrity.    **Relation to Control Flow Boundaries:** Tests the resilience of stack and control flow when `br` interacts with nested `if` and transitions between modules.

(assert_invalid
  (module
    (import "otherModule" "exportedFunction" (func $exportedFunction (result i32)))
    (func (export "test")
      (loop 
        (if
          (then (br 1))
        )
        (call $exportedFunction)
      )
    )
  )
  "type mismatch"
)